--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             <td><b>Activity</b></td>
         </tr>
         <tr>
+            <td>5:00am-6:30am</td>
+            <td>Yoga,Exercises</td>
+        </tr>
+        <tr>
             <td>6:30am-7am</td>
             <td>Brushing Teeth,Bathing</td>
         </tr>
@@ -54,7 +58,11 @@
         </tr>
         <tr>
             <td>8:30pm-10:30pm</td>
-            <td>Doing College work,Internship Work and Sleeping</td>
+            <td>Doing College work,Internship Work</td>
+        </tr>
+        <tr>
+            <td>10:30pm-5:00am</td>
+            <td>Sleep</td>
         </tr>
     </table>
 </body>
