--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Time Table</title>
+    <title>Routine Time Table</title>
 </head>
 <body>
-    <h1>Daily TimeTable</h1>
+    <h1>Routine TimeTable</h1>
     <table border="10" cellspacing="10" cellpadding="10">
         <tr>
             <td><b>Time</b></td>
